<android.support.v7.widget.GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:columnCount="3"
    tools:context="id.co.meda.survey.CategoryFragment">

    <ImageView
        android:id="@+id/food"
        android:tag="@string/food"
        app:layout_column="0"
        app:layout_row="0"
        app:layout_columnWeight="1"
        android:layout_width="0dp"
        android:layout_margin="10dp"
        android:layout_height="100dp"
        android:src="@drawable/food"
        android:onClick="onClickCategoryProduct"/>
    <ImageView
        android:id="@+id/beverage"
        android:tag="@string/beverage"
        app:layout_column="1"
        app:layout_row="0"
        app:layout_columnWeight="1"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/beverage"
        android:onClick="onClickCategoryProduct"
        android:layout_height="100dp"/>
    <ImageView
        android:id="@+id/groceries"
        android:tag="@string/groceries"
        app:layout_column="2"
        app:layout_row="0"
        app:layout_columnWeight="1"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/groceries"
        android:onClick="onClickCategoryProduct"
        android:layout_height="100dp"/>
    <ImageView
        android:id="@+id/baby_care"
        android:tag="@string/baby_care"
        app:layout_column="0"
        app:layout_row="1"
        app:layout_columnWeight="1"
        android:layout_width="0dp"
        android:layout_margin="10dp"
        android:src="@drawable/baby_care"
        android:onClick="onClickCategoryProduct"
        android:layout_height="100dp"/>
    <ImageView
        android:id="@+id/beauty"
        android:tag="@string/beauty"
        app:layout_column="1"
        app:layout_row="1"
        app:layout_columnWeight="1"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/beauty"
        android:onClick="onClickCategoryProduct"
        android:layout_height="100dp"/>
    <ImageView
        android:id="@+id/personal_care"
        android:tag="@string/personal_care"
        app:layout_column="2"
        app:layout_row="1"
        app:layout_columnWeight="1"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/personal_care"
        android:onClick="onClickCategoryProduct"
        android:layout_height="100dp"/>
</android.support.v7.widget.GridLayout>
