<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="id.co.meda.survey.ChangeProfileActivity">

    <TextView
        android:textColor="#ffff"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:gravity="center_horizontal"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="30sp"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:textColor="#dfdfdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userFullName_tv_acp"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:textColor="#dfdfdf"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userEmail_tv_acp"
        android:inputType="textNoSuggestions"/>


    <EditText
        android:textColorHint="#bdbdbd"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_old_password"
        android:inputType="textPassword"
        android:id="@+id/userOldPassword_tv_acp"/>

    <EditText
        android:textColorHint="#bdbdbd"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        android:id="@+id/userPassword_tv_acp"/>

    <EditText
        android:textColorHint="#bdbdbd"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/re_enter_new_password"
        android:inputType="textPassword"
        android:id="@+id/userRePassword_tv_acp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save_profile"
        android:textAllCaps="false"
        android:onClick="onClickSaveProfile"/>
</LinearLayout>
